syntax = "proto3";

package model;

option go_package = "github.com/PhilippWegner/hochschule-bochum-masterarbeit/microservices/grpc-logger-api/model";

service ModelService {
    rpc WriteLog(LogRequest) returns (LogResponse) {}
}

message Log {
    string name = 1;
    string data = 2;
}

message LogRequest {
    Log logEntry = 1;
}

message LogResponse {
    string result = 1;
}
